# healthi-subnet

./: .gitignore  LICENSE  README.md  setup.cfg
healthi/: config.py
healthi/base/: get_local_data.py  neuron.py  protocol.py  utils.py
healthi/base/data/: trainset.parquet
healthi/core/miners/: miner.py
healthi/core/miners/tasks/disease_prediction/: model.py
healthi/core/validators/: validator.py
healthi/core/validators/scoring/: process.py
healthi/neurons/: miner.py  validator.py
scripts/: auto_update.sh  run.sh
